# AcustticAI

./: LICENSE  docker-compose.yml  package-lock.json
.github/workflows/: frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/app/: main.py
backend/src/app/ai/: train.py
backend/src/app/core/: database.py  logger.py  settings.py
backend/src/app/models/: __init__.py
backend/src/app/schema/: __init__.py
backend/src/notebooks/: train.ipynb
frontend/: .oxlintrc.json  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/app/pages/: AI.tsx  About.tsx  Calculator.tsx  Contact.tsx  Home.tsx  Library.tsx  Perfil.tsx  model.tsx
frontend/src/components/ui/: button.tsx  cardlist.tsx  copyright-tag.tsx  navbar.tsx  navigation-menu.tsx  team.tsx  timeline.tsx
notebooks/: train.ipynb
